Implemented #8: Add support for forking